<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:minHeight="75dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="user"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1.5"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_user" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/about_changes"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/username"
                    android:src="@mipmap/ic_user" />

                <EditText
                    android:id="@+id/username_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="5dip"
                    android:autoText="false"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:singleLine="true"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/email"
                    android:src="@mipmap/ic_email" />

                <EditText
                    android:id="@+id/email_editText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dip"
                    android:layout_marginTop="5dip"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </LinearLayout>

            <Button
                android:id="@+id/saveChanges_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changes_name_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/password"
                    android:src="@mipmap/ic_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/password_editText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                    <EditText
                        android:id="@+id/passwordConfirmation_editText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dip"
                        android:layout_marginTop="5dip"
                        android:gravity="center"
                        android:hint="@string/passwordNewConfirm"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/changePass_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changes_password" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>