<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp">

        <TextView
            android:id="@+id/hours_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_default"
            android:textSize="50sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="50sp" />
        <TextView
            android:id="@+id/minutes_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_default"
            android:textSize="50sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="50sp" />
        <TextView
            android:id="@+id/seconds_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_default"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareEditDelete_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/shareRecord_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:text="@string/upload_record"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableLeft="@mipmap/ic_share" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff"/>

        <Button
            android:id="@+id/editRecord_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_edit"
            android:layout_weight="1"
            android:background="#000000"
            android:text="@string/edit_record"
            android:textColor="#ffffff"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffffff"/>

        <Button
            android:id="@+id/deleteRecord_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000000"
            android:text="@string/delete_record"
            android:textColor="#ffffff"
            android:layout_margin="5dp"
            android:drawableLeft="@mipmap/ic_delete" />

    </LinearLayout>
</RelativeLayout>