<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/frontpage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteTransparent"
        android:layout_marginTop="@dimen/title_margin"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/application_title"
            android:textSize="45sp"
            android:gravity="center"
            android:textColor="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lStartAsVisitor"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/startAsVisitor_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_as_visitor"
            android:layout_weight=".5"
            android:background="@drawable/button_rounded_white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_below="@+id/lStartAsVisitor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

        <TextView
            android:id="@+id/tvHorLineLeft"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="29sp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvHorLineRight"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_weight="4"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="@dimen/offset_small"
        android:layout_below="@+id/lOr">

        <Button
            android:id="@+id/login_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_rounded_white" />

        <Space
            android:layout_width="@dimen/offset_small"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/register_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:background="@drawable/button_rounded_white" />
    </LinearLayout>

</RelativeLayout>