<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.62">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginFacebook_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_email" />

            <EditText
                android:id="@+id/login_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="5dip"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxEms="20"
                android:minWidth="250dp"
                android:singleLine="true" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/password"
                android:src="@mipmap/ic_key" />

            <EditText
                android:id="@+id/password_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minWidth="250dp"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/login_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:background="#000000"
            android:focusable="false"
            android:minWidth="280dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_login"
            android:text="@string/login" />

        <CheckBox
            android:id="@+id/rememberMe_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_imageButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/rememberpass" />
    </RelativeLayout>


    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/register"-->
    <!--android:id="@+id/register_button"-->
    <!--android:background="#000000"-->
    <!--android:textColor="#ffffff" />-->
    <!-- Footer Start -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <View
            android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/registration_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/strut"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/no_account" />

        <TextView
            android:id="@+id/forgetPassword_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/strut"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/forgetPass" />

    </RelativeLayout>
    <!-- Footer Ends -->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<TextView-->
    <!--android:id="@+id/tvContinueLoggedOff"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/withoutLogin"-->
    <!--android:gravity="center"-->
    <!--android:layout_gravity="center"/>-->

    <!--</LinearLayout>-->

</LinearLayout>